# directive-claude-mcp

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  register.ps1  register.sh  requirements.txt  server.py  test_server.py  verify_client.py
docs/: AGENT.md
